# docly

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  mcp.json  package-lock.json
backend/: AGENTS.md  pyproject.toml  requirements-core.txt  requirements.txt
backend/app/: AGENTS.md  config.py  main.py
backend/app/agentic/: __init__.py  controller.py  critic.py  evaluator.py  planner.py
backend/app/api/: AGENTS.md
backend/app/api/routes/: chat.py  collections.py  conversations.py  documents.py  settings.py
backend/app/cache/: __init__.py  gpt_cache.py
backend/app/database/: models.py  session.py
backend/app/database/repositories/: collections.py  conversations.py  documents.py  messages.py  provider_configs.py  user_preferences.py
backend/app/evaluation/: __init__.py  ragas_eval.py
backend/app/ingestion/: chunker.py  embedder.py  indexer.py  watcher.py
backend/app/ingestion/parsers/: base.py  docx.py  excel.py  html.py  markdown.py  pdf.py
backend/app/llm/: client.py
backend/app/llm/providers/: anthropic.py  base.py  custom.py  google.py  openai.py
backend/app/retrieval/: hybrid_search.py  qdrant_client.py
backend/app/schemas/: __init__.py  chat.py  collections.py  conversations.py  documents.py  settings.py
backend/app/tracing/: __init__.py  phoenix.py
backend/tests/: AGENTS.md
backend/tests/integration/: __init__.py  test_full_pipeline.py
backend/tests/test_agentic/: test_controller.py  test_critic.py  test_evaluator.py  test_planner.py
backend/tests/test_api/: test_chat_provider_wiring.py
backend/tests/test_database/: conftest.py  test_models.py  test_repositories.py
backend/tests/test_ingestion/: test_chunker.py  test_embedder.py  test_indexer.py  test_parsers.py
backend/tests/test_llm/: test_client.py  test_providers.py
backend/tests/test_retrieval/: test_hybrid_search.py  test_qdrant_client.py
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/superpowers/: AGENTS.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AGENTS.md  App.tsx  (+1 more)
scripts/: AGENTS.md  build_backend.sh  build_frontend.sh  package.sh  run_dev.ps1  run_dev.sh
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: backend.rs
(+23 files in other folders)
