[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-assistant-backend"
version = "0.1.0"
description = "Local RAG assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "aiosqlite==0.20.0",
    "qdrant-client==1.12.0",
    "unstructured[all-docs]==0.15.12",
    "httpx==0.27.2",
    "anthropic==0.37.1",
    "openai==1.51.0",
    "google-generativeai==0.8.3",
    "langgraph==0.2.38",
    "tenacity==9.0.0",
    "gptcache==0.1.27",
    "arize-phoenix==5.6.0",
    "ragas==0.2.3",
    "watchdog==5.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"