[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-assistant-backend"
version = "0.1.0"
description = "Local RAG assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
    "anthropic>=0.37.0",
    "openai>=1.51.0",
    "google-generativeai>=0.8.0",
    "langgraph>=0.2.0",
    "tenacity>=9.0.0",
    "gptcache>=0.1.27",
    "watchdog>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
parsing = [
    "unstructured[all-docs]>=0.15.0",
]
observability = [
    "arize-phoenix>=5.6.0",
    "ragas>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
