[package]
name = "doc-assistant"
version = "0.1.0"
description = "Local RAG assistant desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
open = "5.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
